# rsi

./: .gitignore  EXPERIMENT_REPORT.md  README.md  pyproject.toml
results/: leaderboard.json
results/demo_backup/kernels/rmsnorm_residual/: 40fb725dff.json  40fb725dff.py  42d3fd1cc2.json  42d3fd1cc2.py  766518095e.json  766518095e.py  c1782b5792.json  c1782b5792.py  d1518805e7.json  d1518805e7.py  f8aefb480f.json  f8aefb480f.py  feaa21ea8b.json  feaa21ea8b.py
results/demo_backup/memory/: __init__.py  store.py
results/runs/run_1782329144/: events.jsonl
results/runs/run_1782330240/: events.jsonl
results/runs/run_1782333953/: events.jsonl
results/runs/run_1782336278/: events.jsonl
results/runs/run_1782336986/: events.jsonl
rsi/: __init__.py  agents.py  cli.py  config.py  hooks.py  orchestrator.py  tools.py  vllm_kernels.py
rsi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rsi/bench/: __init__.py  ops.py  reference.py  runner.py
rsi/kernels/gqa_decode_attention/: f63ec096e0.json
rsi/kernels/rmsnorm_residual/: 8a699cb2a8.json  8a699cb2a8.py  bda7e46ef3.json  bda7e46ef3.py  f2d455d906.json  f2d455d906.py
rsi/kernels/swiglu_act/: 02feab2ac0.json  0fe37d8d81.json  6f3d49b0c6.json  6f3d49b0c6.py  8344e67ea8.json  8344e67ea8.py  8e3ad24277.json  8e3ad24277.py  a75977ec30.json  a75977ec30.py
rsi/memory/longterm/: strategies.jsonl
rsi/memory/shortterm/: run_1782333953_rmsnorm_residual.jsonl  run_1782336278_rmsnorm_residual.jsonl
scripts/: rsi_demo.py  setup_env.sh  smoke_test.py  vllm_pd.py  vllm_smoke.py  vllm_throughput.py
(+5 files in other folders)
